syntax = "proto3";

enum OperationStatus{
    SUCCESS = 0;
    ERROR = 1;
    ERROR_TYPE_INCORRECT = 2;
    ERROR_PUT_SLICE = 3;
    ERROR_KEY_HASH_INCORRECT = 4;
    ERROR_SLICE_NOT_FOUND = 5;
    ERROR_KEY_NOT_FOUND = 6;
}

message KvEntry{
    bytes key = 1;
    bytes value=2;
}

message KeyRange {
    bytes start_key = 1;
    bytes end_key = 2;
}

message SliceInfo{
    string key_hash = 1;
    uint32 index = 2;
    string slice_hash = 3;
}

message ValueInfo{
    bool value_sliced = 1;
    repeated SliceInfo slice_info = 2;
    bytes last_value = 3;
}

message PutKvRequest{
    KvEntry entry = 1;
}

message PutKvResponse{
    string status = 1;
}

message GetKvRequest{
    bytes key = 1;
}

message GetKvResponse{
    bytes value = 1;
}

message DeleteKvRequest{
    bytes key = 1;
}

message DeleteKvResponse{
    string status = 1;
}

message ScanKvRequest{
    bytes start_key = 1;
//    bytes end_key = 2;
    uint32 limit = 3;
    bool reverse = 4;
    bool key_only = 5;
}

message ScanKvResponse{
    repeated KvEntry entries = 2;
}

service KvOperation {
    rpc Put (PutKvRequest) returns (PutKvResponse);
    rpc Get (GetKvRequest) returns (GetKvResponse);
    rpc Delete (DeleteKvRequest) returns (DeleteKvResponse);
    rpc Scan (ScanKvRequest) returns (ScanKvResponse);
}